iRedMail-0.9.3:
    * Works on new distribution releases:
        - Ubuntu 15.10
        - OpenBSD 5.8.

    * SOGo Groupware is now available on FreeBSD.
    * Cluebringer has been removed. It's not under active development and no
      new release since 2013 (the latest stable release doesn't support IPv6),
      we have throttling support in iRedAPD as replacement.
    * Improvements:
        - New script: tools/ldap_assign_user_to_groups.py. Used to assign user
          to specified mailing lists, or remove membership.
        - New script: tools/ldap_move_members_to_another_group.py. Used to
          move or copy ALL members of specified mailing list to another.
        - Supports per-user alias address in SQL backends. 2 new sql columns
          are required: `alias.is_alias`, `alias.alias_to`.
        - Enable postscreen service in Postfix by default.
          Important Note: all users must use port 587 for sending email, port
          25 doesn't accept submitted mail by authenticated users anymore.
        - New SQL table `amavisd.outbound_wblist`, used to store whitelists
          and blacklists for outbound messages. It's required by iRedAPD
          plugin 'amavisd_wblist'.

    * Fixed issues:
        - Incorrectly set default fireewall zone on RHEL/CentOS 7 if you
          didn't choose to restart firewall immediately.
        - 'daemonze =' is required by RHEL/CentOS v6, but not v7.
        - Incorrect Dovecot Master User account used by SOGo.
        - Dovecot Master User doesn't work with LDAP backend.
        - Incorrect quota warning priorities in Dovecot.
          Thanks Peter <rs _at_ samplezone.ch> for the feedback.
        - Incorrect Amavisd setting to sign DKIM on inbound messages.
        - [RHEL/CentOS] Cannot start uwsgi service with 'daemonize' setting in
          /etc/uwsgi.ini.
        - Not preserve the case of ${extension} while delivering message to
          mailbox.

    * Updated packages: